Add Admin Menu with CRUD elements(Simple Search,(de)activate/(un)block an account,pagination,sorting),a couple of articles with the corresponding avatars Add toasts notifications CSRF token is temporarily disabled Добавлено: Админ меню с элементами CRUD(Поиск,(де)активация/(раз)блокировка аккаунта, пагинация, сортировка),несколько статей,соответствующие аватарки. Добавлено: "Toasts" уведомления CSRF токен времено отключен

--- a/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
+++ b/src/main/webapp/WEB-INF/view/authorization/forgotPassword.html
@@ -10,10 +10,14 @@
         <link rel="stylesheet" th:href="@{/resources/static/css/base/base.css}">
         <link rel="stylesheet" th:href="@{/resources/static/css/authorization/base.css}">
         <link rel="stylesheet" th:href="@{/resources/static/css/authorization/registration.css}">
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
+    <div th:if="${TokenNotFound}" th:insert="~{base/toastNotFound :: toast}"></div>
     <div class="main">
         <div class="frame" style="height: 655px !important;">
             <div class="left">
