--- a/src/main/webapp/WEB-INF/view/authorization/login.html
+++ b/src/main/webapp/WEB-INF/view/authorization/login.html
@@ -9,10 +9,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" th:href="@{/resources/static/css/base/base.css}">
         <link rel="stylesheet" th:href="@{/resources/static/css/authorization/base.css}">
+        <script src="https://code.jquery.com/jquery-latest.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
+    <div th:if="${param.showInfo}" th:insert="~{base/toastShowInfo :: toast}"></div>
+    <div th:if="${success}" th:insert="~{base/toastSuccess :: toast}"></div>
         <div class="main">
             <div class="frame">
                 <div class="left">
